--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,8 @@
     "better-auth": "^1.4.6",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.0",
+    "lucide": "^0.561.0",
+    "lucide-react": "^0.561.0",
     "next": "^16.0.8",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
